--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+<!--    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
+    <link
+            rel="icon"
+            type="image/png"
+            href="%PUBLIC_URL%/icon-wave-100-white.png"
+            media="(prefers-color-scheme: dark)"
+    />
+    <link
+            rel="icon"
+            type="image/png"
+            href="%PUBLIC_URL%/icons8-wave-100.png"
+            media="(prefers-color-scheme: light)"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
