--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
     <link
             rel="icon"
             type="image/png"
-            href="%PUBLIC_URL%/icon-wave-100-white.png"
+            href="%PUBLIC_URL%/assets/icon-wave-100-white.png"
             media="(prefers-color-scheme: dark)"
     />
     <link
             rel="icon"
             type="image/png"
-            href="%PUBLIC_URL%/icons8-wave-100.png"
+            href="%PUBLIC_URL%/assets/icons8-wave-100.png"
             media="(prefers-color-scheme: light)"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -26,13 +26,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap">
     <link rel="stylesheet" href="/src/assets/styles/atom-one-dark.css">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/assets/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
