--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-<!--    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
+<head>
+    <meta charset="utf-8"/>
+    <!--    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
     <link
             rel="icon"
             type="image/png"
-            href="%PUBLIC_URL%/assets/icon-wave-100-white.png"
+            href="/assets/icon-wave-100-white.png"
             media="(prefers-color-scheme: dark)"
     />
     <link
             rel="icon"
             type="image/png"
-            href="%PUBLIC_URL%/assets/icons8-wave-100.png"
+            href="/assets/icons8-wave-100.png"
             media="(prefers-color-scheme: light)"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#000000"/>
     <meta
-      name="description"
-      content="Nico D'Cotta"
+            name="description"
+            content="Nico D'Cotta"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com">
 
@@ -32,7 +32,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/assets/manifest.json" />
+    <link rel="manifest" href="/assets/manifest.json"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -43,19 +43,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Nico D'Cotta</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+</head>
+<body>
+<script type="module" src="/src/index.tsx"></script>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
+</body>
 </html>
